# reef-imaging

./: .cursorrules  .env-template  .gitignore  AGENTS.md  BRANCH_COMPARISON_REPORT.md  CLAUDE.md  CODEBASE_REVIEW.md  README.md  REFACTORING_PLAN.md  docker-compose.yaml  extract_lab_video.py  pyproject.toml
.github/workflows/: service_check.yml
docker/: docker-compose.yaml  docker_cleanup.sh
reef_imaging/: README.md  __main__.py  hardware_smoke_test.py  orchestrator.py
reef_imaging/control/: README.md
reef_imaging/control/cytomat-control/: README.md  start_hypha_service_incubator.py
reef_imaging/control/dorna-control/: README.md  dorna_controller.py  start_hypha_service_robotic_arm.py
reef_imaging/control/mirror-services/: README.md  mirror_hamilton.py  mirror_incubator.py  mirror_robotic_arm.py
reef_imaging/lab_live_stream/: FYIR_camera.py  README.md  hamilton_camera.py  hamilton_watchdog.py  lab_cameras.py  lab_cameras_watchdog.py  realsense_camera.py  watchdog.py
reef_imaging/lab_live_stream/templates/: index_lab.html
reef_imaging/orchestration/: __init__.py  admission.py
reef_imaging/orchestrator/: __init__.py  api.py  core.py  health.py  main.py  tasks.py  transport.py
reef_imaging/orchestrator/config/: __init__.py  manager.py  models.py  store.py
reef_imaging/utils/: __init__.py  cleanup_config.py  health.py  responses.py
tests/: test_admission.py  test_hardware_smoke_test.py  test_incubator_service.py  test_orchestrator_refactor.py
traefik/: docker-compose.yaml
traefik/scripts/: rotate-traefik-logs.sh
(+23 files in other folders)
