[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reef-imaging"
version = "0.1.0"
readme = "README.md"
description = "REEF Microscopy Imaging Farm Control Software"
dependencies = [
    "squid-control",
    "hypha-rpc==0.20.80",
    "watchdog==6.0.0",
    "numcodecs==0.13.1",
    "av==11.0.0",
    "aiortc==1.13.0",
]

[project.optional-dependencies]
all = []

[project.scripts]
reef-imaging = "reef_imaging.__main__:main"
reef-hardware-smoke-test = "reef_imaging.hardware_smoke_test:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["reef_imaging*"]
exclude = ["tests*", "scripts*"]
